# pyrendering

./: README.md
assets/: demo.webm  demo_video.webm
pyrendering/: pyproject.toml  requirements.txt
pyrendering/src/examples/: camera.py  engine.py  rotating.py  simple.py  text.py  texture.py
pyrendering/src/pyrendering/: __init__.py  color.py  context.py  engine.py  font.py  graphics.py  shapes.py  vectors.py
