[project]
name = "pyrendering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ShyMike", email = "122023566+ImShyMike@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "glfw>=2.9.0",
    "numpy>=2.2.6",
    "pillow>=11.3.0",
    "wgpu>=0.23.0",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
